tests/errors/compiler/bad_param_in_stand_func/array_in_exp.c
int main()
{
	int a[10];
	float b, c;
	
	b = 1;
	c = exp(a);
	print(c);
	
	return 0;
}